style.css
html {
    scroll-behavior: smooth;
}

@media (max-width: 768px) {
    .section {
        width: 100%;
    }
}

@font-face {
     font-family: Roboto;
     src: url("assets/fonts/Roboto-Regular.ttf");
 }

* {
    box-sizing: border-box;
}

  body {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      margin: 0;
      padding: 0;
      min-height: 100vh;
      font-family: Roboto, sans-serif;
      font-size: 18px;
      line-height: 1.5;
      background-image: url(assets/img/4850037.jpg);
      background-size: cover;
      background-repeat: no-repeat;
  }

  .title {
      font-size: 30px;
      text-transform: uppercase;
      letter-spacing: 4px;
      text-align: center;
  }
  .subtitle {
      font-size: 20px;
      font-weight: 300;
      text-transform: uppercase;
      letter-spacing: 4px;
      text-align: center;
  }

  .container {
      max-width: 1440px;
      margin: auto;
  }
 
  .nav-list {
      display: flex;
      justify-content: flex-end;
      align-items: center;
      list-style: none;
  }

  .nav-link {
      padding: 33px 20px;
      line-height: 50px;
      text-decoration: none;
      color: #ffffff;
  }

  .nav-link:hover {
      background-color: #d2691e;
      transition: .3s;
  }

  .link {
      color: #000000;
  }

  .link:hover {
    color: #d2691e;
    transition: .3s;
  }

  .main-container {
      display: flex;
      flex-wrap: wrap;
  }
  
  .section {
      width: 50%;
      }

  .footer-container {
    display: flex;
    justify-content: space-between;
  }

  .header {
      background-color: #000000;
      margin-bottom: 20px;
  }

  .snippet {
      background-color: #f0f0f0;
  }
  
  .footer {
    padding: 20px;
    background-color: #000000;
    color: #ffffff;
  }

  .footer-link {
      color:#ffffff;
      text-decoration: none;
  }

  .footer-created {
      padding: 10px;
  }

